Fixed front page scale on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3708,7 +3708,7 @@ input, select, textarea {
 
 			#banner {
 				padding: 7em 3em 5em 3em ;
-				height: auto;
+				height: 1;
 				min-height: 0;
 			}
 
